add screen on click

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>VoxelWorld</title>
+  <title>VR Website</title>
   <meta name="description" content="VoxelWorld">
   <script src="https://aframe.io/releases/1.1.0/aframe.min.js"></script>
   <script src="dist\index.bundle.js"></script>
