--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>VR Website</title>
-  <meta name="description" content="VoxelWorld">
-  <script src="https://aframe.io/releases/1.1.0/aframe.min.js"></script>
+  <meta name="description" content="VR Website test">
   <script src="dist\index.bundle.js"></script>
 </head>
 
